--- a/src/_includes/components/header-nav.njk
+++ b/src/_includes/components/header-nav.njk
@@ -2,7 +2,14 @@
 	<symbol id="menu-icon" viewBox="0 0 1536 1536">
 		{% include 'svg/menu.svg' %}
 	</symbol>
+	<symbol id="search" viewBox="0 0 21 22">
+		{% include 'svg/search.svg' %}
+	</symbol>
 </svg>
+
+{% set searchAction = "/search/" %}
+{% set placeholderForSearch = "Search..." %}
+{% set ariaLabelForSearch = "Enter keywords for a site-wide search" %}
 
 <div class="nav-wideScreen">
 	{% include 'components/nav-menu.njk' %}
