--- a/src/views.njk
+++ b/src/views.njk
@@ -1,4 +1,5 @@
 ---
+title: Views
 permalink: /views/{% if pagination.pageNumber > 0 %}page/{{ pagination.pageNumber + 1 }}/{% endif %}
 pagination:
   data: collections.views
@@ -6,18 +7,19 @@ pagination:
 ---
 {% extends 'layouts/base.njk' %}
 
-{% set currentPage = pagination.pageNumber + 1 %}
-{% set pageTitle = 'Views (Page ' + currentPage + ')' %}
-
 {% block content %}
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="placeholder" viewBox="-4 -4 224 224">
       {% include 'svg/placeholder.svg' %}
     </symbol>
   </svg>
-  
-  <article class="views">
+
+  <article class="views static-view">
 		<h1>Views</h1>
+    {% set searchAction = "/views/" %}
+    {% set placeholderForSearch = "Search posts..." %}
+    {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
+    {% include 'components/search-container.njk' %}
 		<div class="news-grid">
 			{% for item in pagination.items %}
 			<div class="api-content">
@@ -29,4 +31,112 @@ pagination:
 		  {% include 'components/pagination.njk' %}
     {% endif %}
 	</article>
+
+  {# For displaying dynamic search and filtering results #}
+	<article class="views dynamic-view">
+    <h1>Views{{ '{{ searchTitle }}' }}</h1>
+		<p role="status" v-if="searchStatus">{{ '{{ searchStatus }}' }}</p>
+    <div class="search-container">
+    	<svg><use xlink:href="#search" /></svg>
+    	<form method="get" action="/views/">
+    		<input name="s" type="search" placeholder="Search posts..." aria-label="Enter keywords for a search in posts" :value="searchQuery">
+    	</form>
+    </div>
+		<div class="news-grid" v-if="resultsToDisplay.length > 0">
+		  <div v-for="item in resultsToDisplay" :key="item.id" class="api-content">
+			  {# TODO: The gride item layout below can go into a sharable vue template script
+			  when https://github.com/11ty/eleventy-plugin-vue is released #}
+        <article class="news-item">
+					<div class="preview-media-wrapper">
+					  <figure class="content">
+						  <svg v-if="item.picture===null" class="logo placeholder-img">
+							  <use xlink:href="#placeholder" />
+						  </svg>
+							<img v-else :src="item.picture" :alt="item.altTag">
+					  </figure>
+					</div>
+
+					<div class="content-preview">
+					  <h2 class="h3">
+						  <a :href="item.href">
+							  {{ '{{ item.title }}' }}
+						  </a>
+					  </h2>
+
+					  <div v-if="item.category==='views'" class="author">
+						  {{ '{{ item.author }}' }}
+					  </div>
+
+					  <div v-if="item.dateTime" class="date">
+						  <time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
+					  </div>
+
+					  <div v-html="item.excerpt" class="preview-content" />
+					</div>
+			  </article>
+		  </div>
+	  </div>
+
+	  {# TODO: The pagination layout below can go into a sharable vue template script
+	  when https://github.com/11ty/eleventy-plugin-vue is released #}
+	  <nav v-if="pagination" class="pagination" aria-label="pagination">
+			<ul class="pagination-list">
+				<li>
+					<a v-if="pagination.href.previous" :href="pagination.href.previous" class="pagination-previous">
+						<svg><use xlink:href="#previous" /></svg>
+						<span class="screen-reader-only">previous</span>
+					</a>
+				</li>
+				<li v-if="pagination.pageNumber > 1">
+					<a :href="pagination.href.first" class="pagination-link">1</a>
+				</li>
+				<li v-if="pagination.pageNumber > 2" class="pagination-ellipsis">
+					<span>&hellip;</span>
+				</li>
+
+				<li v-if="pagination.pageNumber > 0" v-bind:class="{'hide-on-mobile': pagination.hideProceedingPageButton}">
+					<a :href="pagination.href.previous" class="pagination-link">
+						{{ '{{ pagination.pageNumber }}' }}
+					</a>
+				</li>
+
+				<li>
+					<a :href="pagination.hrefs[pagination.pageNumber]" class="pagination-link is-current" aria-current="page">
+						{{ '{{ pagination.pageNumber + 1 }}' }}
+					</a>
+				</li>
+
+				<li v-if="pagination.pageNumber < pagination.pages.length - 2" v-bind:class="{'hide-on-mobile': pagination.hideFollowingPageButton}">
+					<a :href="pagination.hrefs[pagination.pageNumber + 1]" class="pagination-link">
+						{{ '{{ pagination.pageNumber + 2 }}' }}
+					</a>
+				</li>
+
+				<li v-if="pagination.pageNumber < pagination.pages.length - 3" class="pagination-ellipsis">
+					<span>&hellip;</span>
+				</li>
+				<li v-if="pagination.pageNumber < pagination.pages.length - 1">
+					<a :href="pagination.href.last" class="pagination-link">
+						{{ '{{ pagination.pages.length }}' }}
+					</a>
+				</li>
+				<li>
+					<a v-if="pagination.href.next" :href="pagination.href.next" class="pagination-next">
+						<svg><use xlink:href="#next" /></svg>
+						<span class="screen-reader-only">next</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</article>
+{% endblock %}
+
+{% block headerScripts %}
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+{% endblock %}
+
+{% block footerScripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+<script src="/js/utils.js"></script>
+<script src="/js/views-dynamic-handler.js"></script>
 {% endblock %}
