--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -23,6 +23,7 @@ $gold-light: #ffe6a7;
 
 // Secondary
 $black: #000;
+$grey-lighter: #f3f3f3;
 $grey-light: #6c6c6c;
 $grey-dark: #313131;
 $navy-dark: #162439;
@@ -30,8 +31,8 @@ $navy: #203149;
 $navy-light: #2e405b;
 
 $blue-alt: #5c81a9;
-$blue-alt-light:#8caabb;
-$green:#b0d0be;
+$blue-alt-light: #8caabb;
+$green: #b0d0be;
 $green-light: #cee6c5;
 $green-dark: #465d8b;
 $green-pale: #f7fff4;
