--- a/src/views.njk
+++ b/src/views.njk
@@ -12,14 +12,30 @@ pagination:
     <symbol id="placeholder" viewBox="-4 -4 224 224">
       {% include 'svg/placeholder.svg' %}
     </symbol>
+    <symbol id="expand" viewBox="0 0 28 16">
+  		{% include 'svg/expand.svg' %}
+  	</symbol>
+  	<symbol id="apply" viewBox="0 0 26 26" fill="none">
+  		{% include 'svg/apply.svg' %}
+  	</symbol>
+  	<symbol id="reset" viewBox="0 0 26 26" fill="none">
+  		{% include 'svg/reset.svg' %}
+  	</symbol>
   </svg>
 
   <article class="views static-view">
 		<h1>Views</h1>
-    {% set searchAction = "/views/" %}
-    {% set placeholderForSearch = "Search posts..." %}
-    {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
-    {% include 'components/search-container.njk' %}
+
+    <form method="get" action="/views/">
+      {% set placeholderForSearch = "Search posts..." %}
+      {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
+      {% include 'components/search-container.njk' %}
+
+      {% set filterTitle = "Tags Filters" %}
+      {% set filterAction = "/views/" %}
+      {% include 'components/filter.njk' %}
+    </form>
+
 		<div class="news-grid">
 			{% for item in pagination.items %}
 			<div class="api-content">
@@ -27,6 +43,7 @@ pagination:
 			</div>
 			{% endfor %}
 		</div>
+
     {% if pagination.pages.length > 1 %}
 		  {% include 'components/pagination.njk' %}
     {% endif %}
@@ -36,12 +53,14 @@ pagination:
 	<article class="views dynamic-view">
     <h1>Views{{ '{{ searchTitle }}' }}</h1>
 		<p role="status" v-if="searchStatus">{{ '{{ searchStatus }}' }}</p>
-    <div class="search-container">
-    	<svg><use xlink:href="#search" /></svg>
-    	<form method="get" action="/views/">
+
+    <form method="get" action="/views/">
+      <div class="search-container">
+      	<svg><use xlink:href="#search" /></svg>
     		<input name="s" type="search" placeholder="Search posts..." aria-label="Enter keywords for a search in posts" :value="searchQuery">
-    	</form>
-    </div>
+      </div>
+    </form>
+
 		<div class="news-grid" v-if="resultsToDisplay.length > 0">
 		  <div v-for="item in resultsToDisplay" :key="item.id" class="api-content">
 			  {# TODO: The gride item layout below can go into a sharable vue template script
