--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -93,10 +93,11 @@
 		}
 	}
 
-	// Focus/hover styles for buttons
+	// Styles for buttons
 	.wp-block-file__button {
 		box-shadow: 0 0 0 rem(1) currentColor inset;
 	}
+
 	// Focus/hover styles for links
 	#defaultContainer a:focus,
 	#defaultContainer a:hover,
@@ -107,12 +108,12 @@
 	.search-container input,
 	.card:focus,
 	.card:hover,
-	.wp-block-file__button:focus,
-	.wp-block-file__button:hover,
 	button:focus,
 	button:hover,
 	li .pagination-link,
-	li .pagination-link::before {
+	li .pagination-link::before,
+	.wp-block-file__button:focus,
+	.wp-block-file__button:hover {
 		box-shadow: 0 0 0 rem(2) currentColor inset;
 	}
 
