fix: use box shadow instead of border on tags

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -51,6 +51,11 @@
 	--theme-background-fill: #{$bColor};
 	--placeholder-stroke: #{$fColor};
 
+	// Styles for Tags
+	.post-article .tags a {
+		box-shadow: 0 0 0 rem(1) currentColor inset;
+	}
+
 	// Focus/hover styles for SVGs on the footer
 	footer .footer-content {
 		// Logos on the footer
