--- a/src/scss/components/_post-article.scss
+++ b/src/scss/components/_post-article.scss
@@ -28,8 +28,8 @@
 
 		a {
 			background-color: $gold-light;
-			border: 1px solid transparent;
 			border-radius: rem(20);
+			box-shadow: 0 0 0 rem(1) transparent inset;
 			color: $blue-alt;
 			font-weight: $font-weight-bold;
 			margin: rem(8) rem(16) rem(8) 0;
@@ -37,7 +37,7 @@
 
 			&:focus,
 			&:hover {
-				border: 1px solid $blue-alt;
+				box-shadow: 0 0 0 rem(1) $blue-alt inset;
 			}
 		}
 	}
