--- a/src/views.njk
+++ b/src/views.njk
@@ -30,7 +30,9 @@ pagination:
       {% set placeholderForSearch = "Search posts..." %}
       {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
       {% include 'components/search-container.njk' %}
+    </form>
 
+    <form method="get" action="/views/">
       {% set filterTitle = "Tags Filters" %}
       {% set filterAction = "/views/" %}
       {% include 'components/filter.njk' %}
