--- a/src/viewsWithTagsIndex.njk
+++ b/src/viewsWithTagsIndex.njk
@@ -1,8 +1,15 @@
 ---
 permalink: viewsWithTags.json
 ---
-[
-{%- for item in collections.viewsWithTags %}
-	{{ item | dump | safe }}{% if not loop.last %},{% endif %}
-{%- endfor %}
-]
+{
+	"views": [
+	{%- for item in collections.views %}
+		{{ item | dump | safe }}{% if not loop.last %},{% endif %}
+	{%- endfor %}
+	],
+	"tags": [
+	{%- for item in collections.viewsTags %}
+		{{ item | dump | safe }}{% if not loop.last %},{% endif %}
+	{%- endfor %}
+	]
+}
