feat: add binding for checkboxes on the vue template and handle reset

--- a/src/_includes/components/filter.njk
+++ b/src/_includes/components/filter.njk
@@ -23,7 +23,7 @@
 			<button class="apply-button" type="submit">
 				<svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
 			</button>
-			<button class="reset-button" type="reset">
+			<button class="reset-button" type="button">
 				<svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
 			</button>
 		</div>
