--- a/src/views.njk
+++ b/src/views.njk
@@ -55,17 +55,17 @@ pagination:
 		<p role="status" v-if="searchStatus">{{ '{{ searchStatus }}' }}</p>
 
     <form method="get" action="/views/">
-      {# Search form #}
+      {# Search #}
       <div class="search-container">
       	<svg><use xlink:href="#search" /></svg>
     		<input type="search" name="s" :value="searchQuery" placeholder="Search posts..." aria-label="Enter keywords for a search in posts">
       </div>
 
-      {# Filter form #}
+      {# Filter #}
       <div class="filter">
       	<div class="filter-header">
       		<h2>Tags Filters</h2>
-      		<button type="button" class="filter-expand-button" aria-expanded="false">
+      		<button type="button" class="filter-expand-button" aria-expanded="true">
       			<svg><use xlink:href="#expand" /></svg>
       		</button>
       	</div>
@@ -73,7 +73,7 @@ pagination:
       	<div class="filter-body">
       		<ul class="filter-choices">
       			<li v-for="tag in tags">
-      				<input class="filter-checkbox" type="checkbox" :id="tag.slug" :name="tag.slug">
+      				<input class="filter-checkbox" type="checkbox" v-model="tag.checked" :id="tag.slug" :name="tag.slug">
       				<label :for="tag.slug">{{ '{{ tag.name }}' }}</label>
       			</li>
       		</ul>
@@ -82,7 +82,7 @@ pagination:
       			<button class="apply-button" type="submit">
       				<svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
       			</button>
-      			<button class="reset-button" type="reset">
+      			<button class="reset-button" type="button">
       				<svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
       			</button>
       		</div>
