--- a/src/tags.njk
+++ b/src/tags.njk
@@ -21,7 +21,7 @@ permalink: "tags/{{ oneTagPage.slug }}/{% if oneTagPage.pageNumber %}page/{{ one
     </symbol>
   </svg>
 
-	<article class="tags">
+	<article>
 		<h1>Tag: “{{ oneTagPage.title }}”</h1>
 		<div class="news-grid">
 			{% for item in oneTagPage.posts %}
