--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -25,6 +25,23 @@
 	}
 }
 
+// Maintain aspect ration of a container
+@mixin tags() {
+	display: flex;
+	flex-wrap: wrap;
+
+	a,
+	p {
+		background-color: $gold-light;
+		border-radius: rem(20);
+		box-shadow: 0 0 0 rem(1) transparent inset;
+		color: $blue-alt;
+		font-weight: $font-weight-bold;
+		margin: rem(8) rem(16) rem(8) 0;
+		padding: rem(5) rem(16);
+	}
+}
+
 // To adapt to UIO contrast themes
 @mixin adapt-to-uioThemes($fColor, $bColor) {
 	// Customized colors
@@ -48,20 +65,56 @@
 		stroke-width: rem(3);
 	}
 
-	// "Expand filter" button
-	.filter-expand-button {
-		--expand-button-color: #{$bColor};
-		--expand-button-stroke-color: #{$fColor};
+	.filter {
+		.filter-checkbox {
+			// Box
+			& + label::before {
+				border: 1px solid $fColor;
+			}
 
-		background-color: #{$bColor} !important;
+			// Box focus
+			&:focus + label::before,
+			&:hover + label::before {
+				border: 2.5px solid $fColor;
+			}
 
-		svg {
-			background-color: #{$bColor} !important;
+			// Box checked
+			&:checked + label::before {
+				background: $fColor;
+			}
+
+			// Checkmark
+			&:checked + label::after {
+				background: $fColor;
+				box-shadow:
+					2px 0 0 $bColor,
+					4px 0 0 $bColor,
+					4px -2px 0 $bColor,
+					4px -4px 0 $bColor,
+					4px -6px 0 $bColor,
+					4px -8px 0 $bColor;
+			}
 		}
 
-		&:focus,
-		&:hover {
-			--expand-button-color: currentColor;
+		// "Expand filter" button
+		.filter-expand-button {
+			--expand-button-color: #{$bColor};
+			--expand-button-stroke-color: #{$fColor};
+
+			background-color: #{$bColor} !important;
+
+			svg {
+				background-color: #{$bColor} !important;
+			}
+
+			&:focus,
+			&:hover {
+				--expand-button-color: #{$fColor};
+			}
+		}
+
+		.filter-buttons {
+			background-color: $grey-lighter;
 		}
 	}
 
@@ -70,11 +123,11 @@
 		a,
 		p {
 			box-shadow: 0 0 0 rem(1) currentColor inset;
+		}
 
-			&:focus,
-			&:hover {
-				box-shadow: 0 0 0 rem(2) currentColor inset;
-			}
+		a:focus,
+		a:hover {
+			box-shadow: 0 0 0 rem(2) currentColor inset;
 		}
 	}
 
@@ -209,26 +262,6 @@
 	// UIO table of content
 	.flc-toc-tocContainer ul li::before {
 		color: $fColor;
-	}
-
-	// The filter checkboxes
-	.filter-checkbox {
-		// Box.
-		& + label::before {
-			border: 1px solid $fColor;
-		}
-
-		// Checkmark
-		&:checked + label::after {
-			background: $fColor;
-			box-shadow:
-				2px 0 0 $fColor,
-				4px 0 0 $fColor,
-				4px -2px 0 $fColor,
-				4px -4px 0 $fColor,
-				4px -6px 0 $fColor,
-				4px -8px 0 $fColor;
-		}
 	}
 
 	@media screen and (min-width: rem(1024)) {
