--- a/src/scss/components/_post-article.scss
+++ b/src/scss/components/_post-article.scss
@@ -22,6 +22,15 @@
 	}
 
 	.tags {
+		@include tags();
+
 		margin-bottom: rem(80);
+
+		a {
+			&:focus,
+			&:hover {
+				box-shadow: 0 0 0 rem(1) $blue-alt inset;
+			}
+		}
 	}
 }
