fix: improve the focus/hover style for the expand button

--- a/src/scss/components/_filter.scss
+++ b/src/scss/components/_filter.scss
@@ -155,6 +155,7 @@
 	.filter-expand-button:focus,
 	.filter-expand-button:hover {
 		--expand-button-color: #{$blue-alt-light};
+		--expand-button-stroke-color: #{$gold-light};
 	}
 }
 
