fix: move focus/hover style for home cards into the def for cards

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -111,8 +111,6 @@
 	#defaultContainer .content-wrapper .tags-info .tags a:focus,
 	#defaultContainer .content-wrapper .tags-info .tags a:hover,
 	.search-container input,
-	.card:focus,
-	.card:hover,
 	button:focus,
 	button:hover,
 	li .pagination-link,
@@ -154,6 +152,11 @@
 		.card {
 			background-image: none;
 			box-shadow: 0 rem(4) rem(4) currentColor;
+
+			&:focus,
+			&:hover {
+				box-shadow: 0 0 0 rem(2) currentColor inset;
+			}
 		}
 	}
 
