--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -155,7 +155,7 @@
 
 			&:focus,
 			&:hover {
-				box-shadow: 0 0 0 rem(2) currentColor inset;
+				box-shadow: rem(10) rem(10) rem(10) currentColor;
 			}
 		}
 	}
