fix: adjust box shadows for the card links on the home page (resolves #319) (#320)

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -111,8 +111,6 @@
 	#defaultContainer .content-wrapper .tags-info .tags a:focus,
 	#defaultContainer .content-wrapper .tags-info .tags a:hover,
 	.search-container input,
-	.card:focus,
-	.card:hover,
 	button:focus,
 	button:hover,
 	li .pagination-link,
@@ -150,11 +148,15 @@
 			}
 		}
 
-		// Home page cards: hide background images on UIO contrast themes
-		.blue,
-		.green,
-		.yellow {
+		// Home page cards: hide background images and adjust box shadows on UIO contrast themes
+		.card {
 			background-image: none;
+			box-shadow: 0 rem(4) rem(4) currentColor;
+
+			&:focus,
+			&:hover {
+				box-shadow: rem(10) rem(10) rem(10) currentColor;
+			}
 		}
 	}
 
