--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -90,11 +90,11 @@ article {
 	.wp-block-image figure .alignwide {
 		margin-left: rem(-100);
 		margin-right: rem(-100);
-		max-width: rem(1024);
+		max-width: 100%;
 	}
 
 	.wp-block-image figure > *.alignwide {
-		max-width: rem(1024);
+		max-width: 100%;
 	}
 }
 
