fix: implement the filter UI changes

--- a/src/_includes/components/filter.njk
+++ b/src/_includes/components/filter.njk
@@ -2,7 +2,8 @@
 	<div class="filter-header">
 		<h2>{{ filterTitle}}</h2>
 		<button type="button" class="filter-expand-button" aria-expanded="false">
-			<svg><use xlink:href="#expand" /></svg>
+			<svg class="arrowdown"><use xlink:href="#arrowdown" /></svg>
+			<svg class="arrowup"><use xlink:href="#arrowup" /></svg>
 		</button>
 	</div>
 
